# fiveo-web

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
bench_suite/: bench_suite.ts  english_dictionary_bench_suite.ts
src/: blocking_matcher.ts  index.ts  match.ts  matcher.ts  service_worker_matcher.ts
src/bindings/: api.ts  factory.ts  matcher.ts  matcher_binding.ts  matcher_binding_factory.ts  matcher_binding_options.ts
src/bindings/ffi/: api.ts  lib.rs
