[package]
name = "fiveo-wasm-target"
version = "0.3.1"
authors = ["Gary Tierney <gary.tierney@gmx.com>"]

[dependencies]
wee_alloc = "0.2.0"
rlibc = "1.0.0"

[dependencies.fiveo]
version = "0.3.1"
features = ["webassembly"]

[features]
profiling = []

[lib]
path = "./src/bindings/ffi/lib.rs"
crate-type = ["cdylib"]

[profile.release]
debug = true
